tests/invalid_programs/for.jas
// Expect .. after loop starting value.

for i in 1.10 {
    println(i);
}
